; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_ieee8023ad_lacp.c_lacp_transit_expire.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_ieee8023ad_lacp.c_lacp_transit_expire.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lacp_softc = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @lacp_transit_expire to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lacp_transit_expire(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.lacp_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.lacp_softc*
  store %struct.lacp_softc* %5, %struct.lacp_softc** %3, align 8
  %6 = load %struct.lacp_softc*, %struct.lacp_softc** %3, align 8
  %7 = call i32 @LACP_LOCK_ASSERT(%struct.lacp_softc* %6)
  %8 = load %struct.lacp_softc*, %struct.lacp_softc** %3, align 8
  %9 = getelementptr inbounds %struct.lacp_softc, %struct.lacp_softc* %8, i32 0, i32 1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @CURVNET_SET(i32 %14)
  %16 = call i32 @LACP_TRACE(i32* null)
  %17 = call i32 (...) @CURVNET_RESTORE()
  %18 = load i32, i32* @FALSE, align 4
  %19 = load %struct.lacp_softc*, %struct.lacp_softc** %3, align 8
  %20 = getelementptr inbounds %struct.lacp_softc, %struct.lacp_softc* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  ret void
}

declare dso_local i32 @LACP_LOCK_ASSERT(%struct.lacp_softc*) #1

declare dso_local i32 @CURVNET_SET(i32) #1

declare dso_local i32 @LACP_TRACE(i32*) #1

declare dso_local i32 @CURVNET_RESTORE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
